--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,8 @@ spring:
     username: local
     password: local
     driver-class-name: org.postgresql.Driver
+  flyway:
+    baselineOnMigrate: true
+
 server:
   port: 8000
