--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8000
+
 spring:
   application:
     name: F1 ELO System
@@ -9,5 +12,5 @@ spring:
   flyway:
     baselineOnMigrate: true
 
-server:
-  port: 8000
+jolpi:
+  base-url: https://localhost:8080
