--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Grant execute permissions to gradlew
         run: chmod +x ./gradlew
 
-      - name: Run unit test
+      - name: Run gradle check
         run: ./gradlew check --stacktrace --no-configuration-cache
 
   lava:
