--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run gradle check
         run: ./gradlew check --stacktrace --no-configuration-cache
 
-  lava:
+  security-scan:
     name: Security Scan 🔎
     runs-on: ubuntu-latest
     permissions:
@@ -40,3 +40,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Run Lava
         uses: adevinta/lava-action@v0
+
+  typo-checker:
+    name: Check typos in project 📚
+    uses: crate-ci/typos@master
