--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
 
   automerge:
     name: Auto-merge dependabot PRs
+    if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' }}
     needs: check
     runs-on: ubuntu-latest
     permissions:
