--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - main
-    types: [opened, synchronize, reopened]
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   check:
@@ -57,7 +57,7 @@ jobs:
   automerge:
     name: Auto-merge dependabot PRs
     if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' }}
-    needs: check
+    needs: [ check, security-scan ]
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
