--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,3 +64,25 @@ jobs:
       contents: write
     steps:
       - uses: fastify/github-action-merge-dependabot@v3
+
+  deploy:
+    if: ${{ github.ref == 'refs/heads/main' }}
+    name: Deploy 🚀
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy the application 🚀
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: |
+            git clone https://github.com/Baaarbz/f1-elo.git
+            sh f1-elo/deploy/deploy.sh
+            rm -rf f1-elo
