--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,9 @@ jobs:
     name: Deploy 🚀
     runs-on: ubuntu-latest
     needs:
-      - build
+      - check
+      - security-scan
+      - typo-checker
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
