feat(infrastructure): update host prod env and update docker compose to fix access denied to files of prometheus

--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/f1_elo
+    url: jdbc:postgresql://barbzdev.com:5432/f1_elo
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
 
