--- a/deploy/infrastructure/docker-compose.yml
+++ b/deploy/infrastructure/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: prometheus/Dockerfile
     container_name: prometheus
     restart: unless-stopped
+    user: root
     ports:
       - "9090:9090"
   postgres:
