--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,9 +114,7 @@ jobs:
     name: Deploy 🚀
     runs-on: ubuntu-latest
     needs:
-      - check
-      - security-scan
-      - typo-checker
+      - build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
