--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Step to check if src/ files are modified
+      - name: Check for changes in src/
+        id: src-changes
+        run: |
+          git fetch origin ${{ github.base_ref }} --depth=1
+          git diff --quiet origin/${{ github.base_ref }} -- src/ || echo "changes"
+
+      # Skip rest of the job if no changes in src/
+      - name: Skip check if no changes
+        if: steps.src-changes.outputs.changes == ''
+        run: echo "No changes in src/, skipping check step."
+        continue-on-error: true
+
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
