--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,4 +143,4 @@ jobs:
           port: ${{ secrets.SERVER_PORT }}
           script: |
             docker pull docker.io/baaarbz/f1-elo:latest
-            docker run -d --restart=always -p 8000:8000 --name f1-elo baaarbz/f1-elo:latest
+            docker run -d --restart=always --replace -p 8000:8000 --name f1-elo baaarbz/f1-elo:latest
