--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,3 +129,4 @@ jobs:
           script: |
             docker pull docker.io/baaarbz/f1-elo:latest
             docker run -d --restart=always --replace -p 8000:8000 --name f1-elo baaarbz/f1-elo:latest
+            docker images --filter "dangling=true" -q | xargs -r docker rmi
