--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,56 +65,14 @@ jobs:
     steps:
       - uses: fastify/github-action-merge-dependabot@v3
 
-  build:
-    if: ${{ github.ref == 'refs/heads/main' }}
-    name: Docker 🐋
-    runs-on: ubuntu-latest
-    needs:
-      - check
-      - typo-checker
-      - security-scan
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: 21
-          distribution: 'adopt'
-
-      - name: Grant execute permissions to gradlew
-        run: chmod +x ./gradlew
-
-      - name: Build
-        run: ./gradlew build --exclude-task check
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Dashboard to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build image and push to Docker Hub 🐋
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: baaarbz/f1-elo:latest
-
   deploy:
     if: ${{ github.ref == 'refs/heads/main' }}
     name: Deploy 🚀
     runs-on: ubuntu-latest
     needs:
-      - build
+      - check
+      - typo-checker
+      - security-scan
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -127,6 +85,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           port: ${{ secrets.SERVER_PORT }}
           script: |
-            docker pull docker.io/baaarbz/f1-elo:latest
-            docker run -d --restart=always --replace -p 8000:8000 --name f1-elo baaarbz/f1-elo:latest
+            git clone https://github.com/Baaarbz/f1-elo.git
+            sh f1-elo/deploy/deploy.sh
             docker images --filter "dangling=true" -q | xargs -r docker rmi
+            rm -rf f1-elo
