--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      pull-requests: write
 
     steps:
       - name: Checkout repository
@@ -42,6 +43,8 @@ jobs:
 
       - name: Run Lava
         uses: adevinta/lava-action@v0
+        with:
+          comment-pr: "true"
 
   typo-checker:
     name: Check typos in project 📚
