feat(cd/ci): define docker file to pass env variables and use it in deploy

--- a/lava.yml
+++ b/lava.yml
@@ -11,5 +11,5 @@ report:
   exclusions:
     - description: Ignore Dockerfile.
       summary: 'Secret Leaked in Dockerfile'
-      resource: 'Dockerfile'
+      resource: './Dockerfile'
 log: error
