--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,3 +123,4 @@ jobs:
             export POSTGRES_USER=$POSTGRES_USER
             git clone https://baaarbz:${{ secrets.GITHUB_TOKEN }}@github.com/Baaarbz/f1-elo.git
             sh f1-elo/deploy/deploy.sh
+            rm -rf f1-elo
