--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,7 +125,7 @@ jobs:
       - name: Deploy the application 🚀
         uses: appleboy/ssh-action@v1.0.3
         env:
-          POSTGRES_HOST: ${{ secrets.POSTGRES_URL }}
+          POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
         with:
@@ -133,7 +133,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
           port: ${{ secrets.SERVER_PORT }}
-          envs: POSTGRES_HOST,POSTGRES_PASSWORD,POSTGRES_PORT,POSTGRES_USER,POSTGRES_DB
+          envs: POSTGRES_URL,POSTGRES_PASSWORD,POSTGRES_USER
           script: |
             export POSTGRES_URL=$POSTGRES_URL
             export POSTGRES_PASSWORD=$POSTGRES_PASSWORD
