--- a/deploy/infrastructure/prometheus/prometheus.yml
+++ b/deploy/infrastructure/prometheus/prometheus.yml
@@ -3,4 +3,4 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     scrape_interval: 15s
     static_configs:
-      - targets: ['localhost:8000']
+      - targets: ['157.230.113.196:8000']
