tech(log): add debug log to trace whitelabel page error

--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -4,6 +4,11 @@ spring:
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
 
+logging:
+  level:
+    root: debug
+    org.springframework.web: debug
+
 jolpi-f1:
   base-url: https://api.jolpi.ca/ergast/f1
 
