--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -130,16 +130,20 @@ jobs:
           POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          AUTH_USERNAME: ${{ secrets.AUTH_USERNAME }}
+          AUTH_PASSWORD: ${{ secrets.AUTH_PASSWORD }}
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
           port: ${{ secrets.SERVER_PORT }}
-          envs: POSTGRES_URL,POSTGRES_PASSWORD,POSTGRES_USER
+          envs: POSTGRES_URL,POSTGRES_PASSWORD,POSTGRES_USER,AUTH_USERNAME,AUTH_PASSWORD
           script: |
             export POSTGRES_URL=$POSTGRES_URL
             export POSTGRES_PASSWORD=$POSTGRES_PASSWORD
             export POSTGRES_USER=$POSTGRES_USER
+            export AUTH_USERNAME=$AUTH_USERNAME
+            export AUTH_PASSWORD=$AUTH_PASSWORD
             git clone https://baaarbz:${{ secrets.GITHUB_TOKEN }}@github.com/Baaarbz/f1-elo.git
             sh f1-elo/deploy/deploy.sh
             rm -rf f1-elo
