--- a/deploy/infrastructure/prometheus/prometheus.yml
+++ b/deploy/infrastructure/prometheus/prometheus.yml
@@ -3,4 +3,4 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     scrape_interval: 15s
     static_configs:
-      - targets: ['barbzdev.com:8000']
+      - targets: ['f1elo.barbzdev.com']
