--- a/deploy/infrastructure/docker-compose.yml
+++ b/deploy/infrastructure/docker-compose.yml
@@ -17,6 +17,6 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: "f1_elo"
+      POSTGRES_DB: "sports_elo"
     ports:
       - "5432:5432"
