--- a/deploy/infrastructure/prometheus/prometheus.yml
+++ b/deploy/infrastructure/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 scrape_configs:
-  - job_name: 'f1-elo'
+  - job_name: 'sports-elo'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 15s
     static_configs:
-      - targets: ['f1elo.barbzdev.com']
+      - targets: ['sportselo.barbzdev.com']
